Fixed modal image size on mobile

--- a/frontend/src/sass/abstracts/_tokens.scss
+++ b/frontend/src/sass/abstracts/_tokens.scss
@@ -136,5 +136,5 @@ $modal-background-overlay: rgba(0 0 0 / 0.7);
 $modal-blur: 4px;
 
 $modal-image-list-max-width: 20rem;
-$modal-current-image-size: clamp(14rem, 32vw, 32rem);
+$modal-current-image-size: clamp(14rem, 75vw, 28rem);
 $modal-list-image-size: clamp(3rem, 16vw, 4rem);
